# homelab_mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  resources.py  server.py
.githooks/: pre-commit  pre-push
data/: baselines.example.yaml  hosts.example.yaml  services.example.yaml  topology.example.yaml
lib/: audit.py  auth.py  certs.py  clients.py  crowdsec.py  gather.py  gitea.py  healthchecks.py  hosts.py  http.py  meta.py  portainer.py  promql.py  redact.py  refresh.py  refresh_content.py  refresh_registries.py  scanopy.py  wireguard.py
scan/: mcp-scan-config.json
scripts/: bootstrap_registries.py  scan_gate.py
tests/: conftest.py  test_aggregation.py  test_annotations.py  test_audit.py  test_auth.py  test_backblaze.py  test_baselines.py  test_bootstrap_registries.py  test_certs.py  test_changefeed.py  test_clients.py  test_compound.py  test_config.py  test_crowdsec.py  test_docker.py  test_freshness.py  test_gather.py  test_gitea.py  test_gitea_lib.py  test_graph.py  test_health.py  test_healthchecks.py  test_hosts.py  test_http.py  test_knowledge.py  test_litellm.py  test_llama.py  test_loki.py  test_myspeed.py  test_npm.py  test_overseerr.py  test_pbs.py  test_plex.py  test_portainer.py  test_prometheus.py  test_prowlarr.py  test_proxmox.py  test_radarr.py  test_redact.py  test_refresh.py  (+13 more)
tools/: aggregation.py  backblaze.py  baselines.py  changefeed.py  compound.py  crowdsec.py  docker.py  freshness.py  gitea.py  graph.py  health.py  healthchecks.py  knowledge.py  (+22 more)
(+1 files in other folders)
