[project]
name = "homelab-mcp"
version = "0.1.0"
description = "FastMCP server for homelab infrastructure monitoring and knowledge"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "trafilatura>=2.0.0",
    # First-party code imports these directly (server.py: pydantic AnyHttpUrl,
    # uvicorn.run). They arrive transitively via fastmcp today, but declaring
    # them means a fastmcp release that swaps its server backend can't silently
    # break HTTP mode with no lockfile signal.
    "pydantic>=2.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.0",
    "ty>=0.0.1a1",
]

[tool.ruff]
exclude = ["data/"]

[tool.ty.src]
# data/ holds synced content from other repos (make sync-data); not our source.
exclude = ["data/"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
